--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <script src="{{ "/styles/index.js" | prepend: site.baseurl }}"></script>
 <div>
-  <a id="about-btn" class="waves-effect waves-teal btn-flat btn-large tab-btn" onclick="show_about();">{{ site.about_btn }}</a>
+  {%if site.about_btn %}<a id="about-btn" class="waves-effect waves-teal btn-flat btn-large tab-btn" onclick="show_about();">{{ site.about_btn }}</a>{% endif %}
   <a id="posts-btn" class="waves-effect waves-teal btn-flat btn-large tab-btn" onclick="show_posts();">{{ site.posts_btn }}</a>
   <a id="projects-btn" class="waves-effect waves-teal btn-flat btn-large tab-btn" onclick="show_projects();">{{ site.projects_btn }}</a>
 </div>
@@ -12,7 +12,7 @@ layout: default
 
   <h2 class="my-mini-heading">{{ site.about_btn }}</h2>
 
-  About me!
+  {{ site.info-text }}
 
 
   <div>
@@ -30,7 +30,7 @@ layout: default
     <li>
       <p class="my-item">
         <a href="{{ post.url | prepend: site.baseurl }}" class="my-link">{{ post.title }}</a><br>
-        <span class="my-item-sub">{{ post.date | date: "%b %-d, %Y" }}</span>
+        <span class="my-item-sub">{{ post.date | date: "%-d %b %Y" }}</span>
       </p>
     </li>
     {% endfor %}
@@ -75,7 +75,7 @@ layout: default
       <li>
         <p class="my-item">
           <a href="{{ post.url | prepend: site.baseurl }}" class="my-link">{{ post.title }}</a><br>
-          <span class="my-item-sub">{{ post.date | date: "%b %-d, %Y" }}</span>
+          <span class="my-item-sub">{{ post.date | date: "%-d %b %Y" }}</span>
         </p>
       </li>
       {% endfor %}
