--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@ layout: default
 ---
 <script src="{{ "/styles/index.js" | prepend: site.baseurl }}"></script>
 <div>
-  {%if site.about_btn %}<a id="about-btn" class="waves-effect waves-teal btn-flat btn-large tab-btn" onclick="show_about();">{{ site.about_btn }}</a>{% endif %}
+  {% if site.about_btn %}
+  <a id="about-btn" class="waves-effect waves-teal btn-flat btn-large tab-btn" onclick="show_about();">{{ site.about_btn }}</a>
+  {% endif %}
+  {% if site.posts_btn %}
   <a id="posts-btn" class="waves-effect waves-teal btn-flat btn-large tab-btn" onclick="show_posts();">{{ site.posts_btn }}</a>
+  {% endif %}
+  {% if site.projects_btn %}
   <a id="projects-btn" class="waves-effect waves-teal btn-flat btn-large tab-btn" onclick="show_projects();">{{ site.projects_btn }}</a>
+  {% endif %}
 </div>
 
 <div id="about" class="my-tabs">
@@ -13,7 +19,6 @@ layout: default
   <h2 class="my-mini-heading">{{ site.about_btn }}</h2>
 
   {{ site.info-text }}
-
 
   <div>
     <a onclick="hide_lists();" class="waves-effect waves-teal btn-flat btn-large">{{ site.close_btn }}</a>
