Started playing around with the style and adding posting functionality.

--- a/index.html
+++ b/index.html
@@ -1,53 +1,19 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Andrew Fiorillo</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="/images/favicon.png">
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400" rel="stylesheet" type="text/css">
-    <script src="https://use.fontawesome.com/a040f27264.js"></script>
-    <script src="application.js"></script>
-    <link rel="stylesheet" href="application.css">
-  </head>
-  <body>
-    <div class="outer-container">
-      <div class="container inner-container">
-        <img src="images/face_1x.png" srcset="images/face_2x.png 2x, images/face_3x.png 3x" alt="" class="the-face">
+---
+layout: default
+title: Andrew Fiorillo
+---
 
-        <p class="my-body">I'm <b>Andrew Fiorillo</b>, an algorithms and support software engineer.</p>
+<img src="images/face_1x.png" srcset="images/face_2x.png 2x, images/face_3x.png 3x" alt="" class="the-face">
 
-        <!-- <p>I sometimes blog at <a href="http://thefaceautomatic.com">The face Automatic</a>.</p> -->
+<p class="my-body">I'm <b>Andrew Fiorillo</b>, an algorithms and support software engineer.</p>
 
-        <p class="my-body">
-          I live in the perpetual sunshine of Tampa, FL.
-          I've been working in computer vision, database design, and HPC solutions.
-          My education has been focused on Physics and Mathematics.
-          I spend my off hours learning new laguages and tinkering.
-        </p>
+<p class="my-body">
+  I live in the perpetual sunshine of Tampa, FL.
+  I've been working in computer vision, database design, and HPC solutions.
+  My education has been focused on Physics and Mathematics.
+  I like to spend my off hours learning new laguages and tinkering.
+</p>
 
-        <!-- <p>
-          Contact me at <a href="mailto:andrewmfiorillo@gmail.com">andrewmfiorillo<span class="at">@</span>gmail.com</a>.
-        </p> -->
-
-        <ul class="elsewhere">
-          <li class="elsewhere__item">
-            <a href="mailto:andrewmfiorillo@gmail.com" class="waves-effect waves-teal btn-flat my-mail-link"><i class="fa fa-envelope-o"></i></a>
-          </li>
-          <li class="elsewhere__item">
-            <a href="https://github.com/andrewmfiorillo" class="waves-effect waves-teal btn-flat my-github-link"><i class="fa fa-github"></i></a>
-          </li>
-          <li class="elsewhere__item">
-            <a href="FiorilloAndrew.pdf" class="waves-effect waves-teal btn-flat my-resume-link"><i class="fa fa-file-pdf-o"></i></a>
-          </li>
-          <li class="elsewhere__item">
-            <a href="https://linkedin.com/in/andrewmfiorillo" class="waves-effect waves-teal btn-flat my-linkedin-link"><i class="fa fa-linkedin"></i></a>
-          </li>
-          <li class="elsewhere__item">
-            <a href="https://twitter.com/muthebeagle" class="waves-effect waves-teal btn-flat my-twitter-link"><i class="fa fa-twitter"></i></a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </body>
-</html>
+<p class="my-body">
+  Sometimes I do write-ups <a href="posts" class="my-link">here</a>.
+</p>
