Nicer error message

--- a/404.html
+++ b/404.html
@@ -7,6 +7,6 @@ permalink: /404.html
 <img src="/images/404_fail.jpg" alt="" class="half-width-img">
 
 <h4 style="text-align: center;">
-  The food you requested doesn't exist. <br>
+  What you requested doesn't exist. <br>
   $\mu$ the beagle understands your pain.
 </h4>
