--- a/about.html
+++ b/about.html
@@ -9,10 +9,11 @@ permalink: /about
   My name is <b>Andrew Fiorillo</b>.
   I develop supporting software and image analysis algorithms for <b>Inspirata</b>.
   I used to study <b>Physics</b> and wrote my undergraduate thesis on edge-detection with <b>Raman micro-spectroscopy</b>.
+  I'm now back in school part-time working towards my Master's in Applied Mathematics.
 </p>
 
 <p class="bio-body">
-  I've been programming for over <b>five years</b> now.
-  I write a whole lot of <b>Python</b> and I've done a fair amount of work in <b>Java</b>, <b>C++</b>, and <b>MATLAB</b>.
+  I've been programming for <b>over five years</b> now.
+  I write a whole lot of <b>Python</b> and I've done a substantial amount of work in <b>Java</b>, <b>C++</b>, and <b>MATLAB</b>.
   I think good software can be explained <b>visually</b>, <b>simply</b>, or <b>quickly</b> -- and I try to make good software.
 </p>
