Emboldened Applied Mathematics

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ permalink: /about
   My name is <b>Andrew Fiorillo</b>.
   I develop supporting software and image analysis algorithms for <b>Inspirata</b>.
   I used to study <b>Physics</b> and wrote my undergraduate thesis on edge-detection with <b>Raman micro-spectroscopy</b>.
-  I'm now back in school part-time working towards my Master's in Applied Mathematics.
+  I'm now back in school part-time working towards my Master's in <b>Applied Mathematics</b>.
 </p>
 
 <p class="bio-body">
