--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@ layout: default
 permalink: /about
 ---
 
-<img src="/images/avatar_1x.png" srcset="/images/avatar_2x.png 2x, /images/avatar_3x.png 3x" class="third-width-img">
+<img src="/images/avatar.jpg" class="third-width-img">
 
 <p class="bio-body">
   My name is <b>Andrew Fiorillo</b>.
