Updated text, added thesis

--- a/about.html
+++ b/about.html
@@ -7,13 +7,13 @@ permalink: /about
 
 <p class="bio-body">
   My name is <b>Andrew Fiorillo</b>.
-  I develop supporting software and image analysis algorithms for <b>Inspirata</b>.
-  I used to study <b>Physics</b> and wrote my undergraduate thesis on edge-detection with <b>Raman micro-spectroscopy</b>.
-  I'm now back in school part-time working towards my <b>Master's in Applied Mathematics</b>.
+  I build backend web services for <b>Delivery Hero</b>, focusing on performant image delivery and machine learning.
+  I studied <b>Physics</b> and wrote my undergraduate thesis on edge-detection with <b>Raman micro-spectroscopy</b>.
 </p>
 
 <p class="bio-body">
-  I've been programming for <b>over five years</b> now.
-  I write a whole lot of <b>Python</b> and I've done a substantial amount of work in <b>Java</b>, <b>C++</b>, and <b>MATLAB</b>.
-  I think good software can be explained <b>visually</b>, <b>simply</b>, or <b>quickly</b> -- and I try to make good software.
+  I have <b>over six years</b> of experience writing software.
+  I write a whole lot of <b>Python</b> and <b>Go</b>, and I've worked on substantial projects using <b>Java</b>, <b>C++</b>, and <b>JavaScript</b>.
+  Although my professional projects have demanded expertise from DevOps to distributed computing, I am most interested in topics around <b>computer vision</b> and <b>quantum computing</b>.
+  My less-technical hobbies include <b>baking</b> and <b>hiking</b>.
 </p>
