--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@ title: Andrew Fiorillo
 
 <h4>Links</h4>
 <ul class="index-list">
-  <li><a href="http://ncf.sobek.ufl.edu/AA00025696/00001?search=fiorillo">My thesis (working on getting a publicly accessible copy)</a></li>
+  <li><a href="/docs/fiorillo_resume.pdf">Resume</a></li>
+  <li><a href="/docs/fiorillo_thesis_edge_effects.pdf">My thesis: <em>Analysis and Modeling of Edge Effects that Arise in the Raman Spectrum of a Silicon Wafer</em></a></li>
 </ul>
