--- a/index.html
+++ b/index.html
@@ -1,17 +1,5 @@
----
-layout: default
-title: Andrew Fiorillo
----
-
-<h4>Posts</h4>
-<ul class="index-list">
-  {% for post in site.posts %}
-    <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-  {% endfor %}
-</ul>
-
-<h4>Links</h4>
-<ul class="index-list">
-  <li><a href="/docs/fiorillo_resume.pdf">Resume</a></li>
-  <li><a href="/docs/fiorillo_thesis_edge_effects.pdf">My thesis: <em>Analysis and Modeling of Edge Effects that Arise in the Raman Spectrum of a Silicon Wafer</em></a></li>
-</ul>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting to https://afiorillo.gitlab.io/</title>
+<meta http-equiv="refresh" content="0; URL=https://afiorillo.gitlab.io/">
+<link rel="canonical" href="https://afiorillo.gitlab.io/">
